# chipshouter-picoemp

./: README.md
firmware/: README.md
firmware/c/: CMakeLists.txt  README.md  main.c  picoemp.c  picoemp.h  serial.c  serial.h  trigger.pio  trigger_basic.pio
firmware/micropython/: README.md  cspico_simple.py
hardware/: BOM for ChipShouter-PicoEMP.xls  README.md
hardware/altium_src/: CSPico_StandardOutjob.OutJob  ChipShouter-Pico.PrjPcb  chipshouter-pico-hv.SchDoc  chipshouter-pico-mcu.SchDoc  chipshouter-pico-panel.PcbDoc  chipshouter-pico.PcbDoc
hardware/design_notes/: README.md
hardware/gerbers/rev04_bantam/: README.md  chipshouter-pico.GBL  chipshouter-pico.GM1  chipshouter-pico.GTL  chipshouter-pico.TXT
hardware/gerbers/rev04_normal/: chipshouter-pico.GBL  chipshouter-pico.GBO  chipshouter-pico.GBP  chipshouter-pico.GBS  chipshouter-pico.GM1  chipshouter-pico.GTL  chipshouter-pico.GTO  chipshouter-pico.GTP  chipshouter-pico.GTS  chipshouter-pico.NCDRILL
hardware/injection_tips/: README.md
hardware/shield/: README.md  picoempshield-1551BTRD-top.f3d  picoempshield-1551BTRD-top.stl
